# OKO

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml  services.toml
src/: checker.rs  config.rs  main.rs  notifier.rs  service.rs
