[package]
name = "plex-pinger"
version = "0.1.0"
edition = "2021"
description = "Plex & qBittorrent monitor with Pushover notifications"

[dependencies]
ureq = { version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }

[profile.release]
opt-level = 'z'
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
