[package]
name = "oko"
version = "0.1.0"
edition = "2021"
description = "Service monitoring daemon — alerts when Plex, qBittorrent, NAS, or VPN goes down"

[dependencies]
ureq = { version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive", "env"] }
toml = "0.8"

[profile.release]
opt-level = 'z'
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
